@@ -1,4 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 EBUILD xmwde-0_p20110601.ebuild 807 RMD160 021c9485cd08ff30b8d1284e70f2d88d621ee221 SHA1 a3088d7eaa658bc60955d70f9222b29739ae3915 SHA256 39ec777912f8e66c2512aadcdfcfdda5a955cfe71a4d713ad1b739e66b91747d
 EBUILD xmwde-0_p20110711.ebuild 827 RMD160 c011a1442ff61bfefe16827bb8cbae9e4a24407d SHA1 39b9a17be7e8520bef0d7f11185f0ef0a4edb47f SHA256 2879a53c034ddf5acbcc6799b1daa4f2524b9e022199d63e31949270add7ca72
-MISC ChangeLog 979 RMD160 567f376afefb858f0bfabe6c0e138d682f72fd36 SHA1 b56ddd95f244bcc2811085442a1bbaf3c4bad27d SHA256 8ef86e99bc1cb892da5cba341f5505456dc4cc0bcffff84d7b22161e95fe7a06
+EBUILD xmwde-0_p20110713.ebuild 858 RMD160 1b58518d6e7f40bfc2128116fd99ed0db2205dcc SHA1 1671da899a22d81485d0a8799ec4ea51f9a6c3d8 SHA256 ac879c94c97bb02966a28a4ac70a02f03c61ec859d8d2f722a7c6f0467977dee
+MISC ChangeLog 1129 RMD160 1d163325e7851a74589b94d8f4dd852d925565a0 SHA1 6cd46ae74f72ab840fe7d6d1b30a141f6820d696 SHA256 bd2b539afac4f4996f2b0057ee037b0a9d851801d5f05a2a12b56eadf35ee9fd
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk4d6DMACgkQknrdDGLu8JAk5gD+IV8Mo8XN40JCo15DqzCL+mrf
+cEr22THadlTzvPw0Xb8A/2vaahQ0sN+T7M3umX6uutACPYpwxr9vvV0yyA5HjQKK
+=kTpm
+-----END PGP SIGNATURE-----
