@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xmwde-0_p20110713 (13 Jul 2011)
+
+  13 Jul 2011; Michael Weber <xmw@gentoo.org> +xmwde-0_p20110713.ebuild:
+  version bump, added xclip for clip2goog
+
 *xmwde-0_p20110711 (11 Jul 2011)
 
   11 Jul 2011; Michael Weber <xmw@gentoo.org> +xmwde-0_p20110711.ebuild:
